# TyPro-CFI

./: .dockerignore  .gitignore  ArtifactEvaluation.md  Dockerfile  README.md  READMEFORIDC.md
examples/: .gitignore  _lib.sh  apache_httpd.conf  build_all.sh  clang_enforce.sh  clang_ref.sh  ftpbench  httpd_crosscompile_partial.sh  httpd_docker.sh  lib_libevent.sh  lib_pcre.sh  lib_zlib.sh  lighttpd_docker.sh  lighttpd_plugin-static.h  lighttpd_sample.conf  memcached_configure  memcached_docker.sh  nginx.conf  nginx_docker.sh  pure-ftpd.conf  pureftpd-tests.py  pureftpd_docker.sh  pureftpd_prepare_tests.sh  redis_Makefile  redis_crosscompile_partial.sh  redis_docker.sh  settings_enforce.sh  settings_enforcestatic.sh  settings_icall.sh  settings_instrument.sh  settings_instrument_enforce.sh  settings_musl_enforce.sh  settings_musl_instrument.sh  settings_ref.sh  vsftpd.conf  vsftpd2.conf  vsftpd3.conf  vsftpd_Makefile  vsftpd_docker.sh
examples/httpd_config/: httpd.conf
llvm-typro/: .gitignore
llvm-typro/cmake/modules/: AddLLVM.cmake
llvm-typro/include/llvm/IR/: FixedMetadataKinds.def
llvm-typro/include/llvm/Typegraph/: StringContainer.h  TGCallGraph.h  Typegraph.h  TypegraphSettings.h  basegraph.h  basicdefs.h  souffle-datastructures.h  timeclock.h  typegraph_layering.h  typegraph_llvm_utils.h  unique_vector.h
llvm-typro/lib/: CMakeLists.txt
llvm-typro/lib/Passes/: CMakeLists.txt  PassBuilder.cpp
llvm-typro/lib/Transforms/IPO/: CMakeLists.txt  LowerTypeTests.cpp  PassManagerBuilder.cpp
llvm-typro/lib/Transforms/Utils/: Local.cpp  SimplifyCFG.cpp
llvm-typro/lib/Typegraph/: .gitignore  CMakeLists.txt  TGCallGraph.cpp  TGDispatcherBuilder.cpp  TGDispatcherBuilder.h  Typegraph.cpp  TypegraphFormatters.h  TypegraphSettings.cpp  abstract_map.h  algorithms.h  color_map.h  compute_equivalence.dl  compute_function_uses.dl  compute_function_uses_simple.dl  debug_equivalence.dl  dotwriter.h  patch_souffle_datastructures.py  scc_algorithms.h  typegraph_function_uses.cpp  typegraph_layering.cpp  typegraph_llvm_utils.cpp
llvm-typro/lib/Typegraph/runtime/: AsmWriterAArch64.h  AsmWriterMips64El.h  AsmWriterx86_64.h  AssemblyBuilder.cpp  AssemblyBuilder.h  ProtectedAllocator.cpp  ProtectedAllocator.h  ProtectedTypegraph.h  enforcing_lazy.cpp  enforcing_rt.cpp  enforcing_rt.h  instrumentation_collect_calltargets.cpp  typegraph_binary_loader.cpp  typegraph_binary_loader.h
llvm-typro/lib/TypegraphPasses/: CMakeLists.txt  CleanupPass.cpp  CleanupPass.h  RelatedWorkPass.cpp  TypegraphPass.cpp  TypegraphPass.h  TyproLibraryFixes.cpp  TyproLibraryFixes.h
llvm-typro/tools/clang/include/clang/Driver/: ToolChain.h
llvm-typro/tools/clang/lib/AST/: CMakeLists.txt  ExprConstant.cpp  TypegraphBuilderLinkingSupport.cpp
llvm-typro/tools/clang/lib/CodeGen/: CGBlocks.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.h  ItaniumCXXABI.cpp  TypegraphBuilder.cpp  TypegraphBuilder.h  TypegraphFunctionInfos.cpp  TypegraphFunctionInfos.h
llvm-typro/tools/clang/lib/Driver/: CMakeLists.txt  Driver.cpp  ToolChain.cpp
llvm-typro/tools/clang/lib/Driver/ToolChains/: Gnu.cpp
llvm-typro/tools/clang/lib/Frontend/: CompilerInvocation.cpp
llvm-typro/tools/lld/ELF/: CMakeLists.txt  Driver.cpp
llvm-typro/tools/llvm-typegraph/: CMakeLists.txt  LLVMBuild.txt  llvm-typegraph.cpp
scripts/: all-collected-calltargets.tar.xz  bench-typro.sh  build-libraries-rt.sh  build-libraries.sh  build-runtime-libs.sh  build-setup.sh  build-sysroots.sh  clang-lto-o3-typegraph-enforce-arm64-carmel.cfg  clang-lto-o3-typegraph-enforce-arm64.cfg  clang-lto-o3-typegraph-musl-enforce-dynamic.cfg  clang-lto-o3-typegraph-musl-enforce.cfg  clang-lto-o3-typegraph-ref-arm64-carmel.cfg  clang-lto-o3-typegraph-ref-arm64.cfg  clang-wrapper.sh  crosscompile-create-sysroots.sh  crosscompile-prepare-symlinks.sh  crosscompile-runtime-libs.sh  crosscompile-update-sysroots.sh  ld-wrapper.sh  runspec-trampoline.sh  simple_spec_summary.py  spec-clang-lto-o3-typro-clangcfi.cfg  spec-clang-lto-o3-typro-instrumented.cfg  spec-clang-lto-o3-typro-musl-dynamic.cfg  spec-clang-lto-o3-typro-musl.cfg  spec-clang-lto-o3-typro-ref.cfg  spec-clang-lto-o3-typro-shielded.cfg  typegraph_musl_dynamic_enforce.sh
test-indirectCall/: getAddress.py  test.c
tests/: bench_rt_loading.py  bench_servers.py  examples_results.py  precision_tool.py  print_errors.py  show_callgraph.py  show_typegraph.py  spec_utils.py  typegraph_test.py  typegraph_utils.py  utils.py
tests/samples/: .gitignore  gcc_htab.c  gcc_htab_ggc_common.c  gcc_htab_hashtab.c  gcc_htab_tree.c  sample1.o.typegraph
